fix(grid): use more predictable spacing between buttons in command cells

--- a/packages/default/scss/grid/_variables.scss
+++ b/packages/default/scss/grid/_variables.scss
@@ -111,7 +111,7 @@ $grid-sorting-index-spacing-x: -$grid-sorting-index-spacing-y !default;
 
 $grid-focused-shadow: $list-item-focused-shadow !default;
 
-$grid-command-cell-button-spacing: .16em !default;
+$grid-command-cell-button-spacing: map-get( $spacing, 2 ) !default;
 
 $grid-search-width: $input-default-width !default;
 
